Changed the docker file and part in psm1 script to have name that is same accross PCs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3'
 services:
   web:
-    build: .
+    container_name: interview
+    build: .    
+    image: interviewrun:latest
     ports:
      - "5000:5000"
